<resources>
    <string name="app_name">WeMeet</string>
    <string name="请回答以下问题">请回答以下问题</string>
    <string name="TextView">TextView</string>
    <string name="Button">Button</string>
    <string name="radiobutton">radiobutton</string>
    <string name="邮箱">邮箱 </string>
    <string name="密码">密码</string>
    <string name="登录">登录</string>
    <string name="退出登录">登出</string>
    <string name="个人中心">个人中心</string>
    <string name="会员号">会员号</string>
    <string name="用户名">用户名</string>
    <string name="微觅币">微觅币</string>
    <string name="种植虫子">种植虫子</string>
    <string name="类型">类型</string>
    <string name="题目">题目</string>
    <string name="输入题目">输入题目</string>
    <string name="输入选项">输入选项</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="设置正确答案">设置正确答案</string>
    <string name="设置金币数">设置虫子所携带金币数，这将从你账户的微觅币中扣除</string>
    <string name="输入金币数">输入金币数</string>
    <string name="确认添加">确认添加</string>
    <string name="刷新一下">刷新一下</string>
    <string name="单项选择题">单项选择题</string>
    <string name="疫情点">疫情点</string>
    <string name="添加描述">添加描述</string>
    <string name="no_thank_you">有没有其他想说的</string>
    <string name="请描述一下你的症状">请描述一下你的症状</string>
    <string name="什么时候开始出现病状">什么时候开始出现病状</string>
    <string name="选择时间">选择时间</string>
    <string name="种虫记录">种虫记录</string>
    <string name="捉虫记录">捉虫记录</string>
    <string name="home">首页</string>
    <string name="menu_setting">设置</string>
    <string name="menu_help">帮助</string>
    <string name="设置存活时间">设置存活时间（小时）</string>
    <string name="筛选">筛选</string>
    <string name="全部">全部</string>
    <string name="症状">症状</string>
    <string name="疑似">疑似</string>
    <string name="确诊">确诊</string>
    <string name="问题">问题</string>
    <string name="范围">范围</string>
    <string name="时间">时间</string>
    <string name="排序方式">排序方式</string>
    <string name="默认">默认</string>
    <string name="价值">价值</string>
    <string name="热度">热度</string>
    <string name="清空">清空</string>
    <string name="确认">确认</string>
    <string name="大范围">大范围</string>
    <string name="一万米">一万米内</string>
    <string name="五千米">五千米内</string>
    <string name="五百米">五百米内</string>
    <string name="医生身份">当前登录身份为：医生</string>
    <string name="用户身份">当前登录身份为：普通用户</string>
</resources>
